--- a/Documentation/form-examples/structures3.html
+++ b/Documentation/form-examples/structures3.html
@@ -10,8 +10,8 @@
     <title>Form structures 4 - Choice</title>
     <link type="text/css" rel="stylesheet" href="../style/demo-style.css" />
 
-    <!-- used for production ready documentation -->
-    <!-- note: one does not need whole mashlib, solid-ui is sufficient also -->
+    <!-- used for production-ready documentation -->
+    <!-- note: one does not need whole mashlib; solid-ui is sufficient -->
     <!--<script type="text/javascript" src="https://solidos.github.io/mashlib/dist/mashlib.js"></script> -->
     <!-- to use only solid-ui -->
     <!-- <script type="text/javascript" src="https://solidos.github.io/solid-ui/dist/main.js"></script> -->
