cleaned up examples and added backup

--- a/Documentation/form-examples/structures2.html
+++ b/Documentation/form-examples/structures2.html
@@ -54,11 +54,11 @@
             <td>Form</td>
           </tr>
           <tr class="form-demo">
-            <td class="input" source="https://solidos.github.io//solid-panes/src/profile/profileFormText.ttl#OrganizationCreationForm">
+            <td class="input" source="https://solidos.solidcommunity.net/public/2021/solidUiFormTestData/structures2_organisations_form.ttl#OrganizationCreationForm">
             </td>
             <td
               class="target"
-              source="https://solidos.solidcommunity.net/public/2021/solidUiFormTestData/organisationDataExample.ttl#org1">
+              source="https://solidos.solidcommunity.net/public/2021/solidUiFormTestData/structures2_organisations_rawData.ttl#org1">
             </td>
             <td class="output"></td>
           </tr>
