changed form examples too

--- a/Documentation/form-examples/UserRoles.html
+++ b/Documentation/form-examples/UserRoles.html
@@ -14,11 +14,11 @@
     <!-- note: one does not need whole mashlib; solid-ui is sufficient -->
     <script type="text/javascript" src="https://solidos.github.io/mashlib/dist/mashlib.js"></script>
     <!-- to use only solid-ui -->
-    <!-- <script type="text/javascript" src="https://solidos.github.io/solid-ui/dist/main.js"></script> -->
+    <!-- <script type="text/javascript" src="https://solidos.github.io/solid-ui/dist/solid-ui.js"></script> -->
     
     <!-- used for local development -->
     <!-- make sure to use the latest build version by running npm run build-form-examples first -->
-    <!--<script type="text/javascript" src="main.js"></script>-->
+    <!--<script type="text/javascript" src="solid-ui.js"></script>-->
     <script type="text/javascript" src="test-form.js"></script>
 </head>
 
