tested umd bundle

--- a/test/browser/tabs/index.html
+++ b/test/browser/tabs/index.html
@@ -52,7 +52,7 @@
             border-top: 0.1em solid gray;
         }
     </style>
-    <script type="text/javascript" src="../../../lib/webpack-bundle.js"></script>
+    <script src="../../../dist/solid-ui.js"></script>
     <script type="text/javascript" src="test-tabs.js"></script>
 </head>
 
