--- a/examples/header/index.html
+++ b/examples/header/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset='UTF-8'>
   <title>solid-ui UI.widgets.header examples page</title>
+  <script src="https://unpkg.com/solid-logic/dist/solid-logic.min.js"></script>
   <script src="../../dist/solid-ui.js"></script>
   <script>
     const $ = document.querySelector.bind(document)
@@ -27,8 +28,8 @@
       loginBanner.appendChild(UI.login.loginStatusBox(document, null, {}));
 
       async function finishLogin() {
-        await UI.authn.authSession.handleIncomingRedirect();
-        const session = UI.authn.authSession;
+        await SolidLogic.authn.authSession.handleIncomingRedirect();
+        const session = SolidLogic.authn.authSession;
         if (session.info.isLoggedIn) {
           // Update the page with the status.
           webId.innerHTML = "Logged in as: " + session.currentUser().uri;
@@ -81,7 +82,7 @@
     window.addEventListener('DOMContentLoaded', async () => {
       try {
         options = { menuList: [{ label: "Testing Button", onclick: () => { alert('hello') } }, { label: "Testing Link", url: 'https://reflectechblog.wordpress.com/' }] }
-        await UI.initHeader(UI.store, options)
+        await UI.initHeader(SolidLogic.store, options)
       } catch (error) {
         window.alert(`Error loading header. You need to have a div with id = PageHeader on your page.`)
       }
